Close the tab page on middle mouse click over tab

BUG: 503417